Fix bugs in the projects